--- a/style.css
+++ b/style.css
@@ -1,1 +1,6 @@
-
+body {background-color:#3efaf7; text-align;justify ; font-size;18px;}
+justify; font-size: 18px ;}
+h1 {text-align: center;background-color:white;}
+h3{ text-align: justify ;color:white}
+ b {color:white; font-size: 18px;}
+ i{color:white; font-size: 18px;}
