--- a/style.css
+++ b/style.css
@@ -4,5 +4,5 @@ h3{ text-align: justify ;color:white}
  b {color:white; font-size: 18px;}
  i{color:white; font-size: 18px;}
  header, footer{ background-color:white; color:white; text-align: center; font-size: 20px;}
- .primeiro paragrafo{text-align: justify;font-size: 18px; border: black solid 2px; padding}
- .segundo paragrafo{text-align: justify;font-size: 18px; border: solid 2px; padding: 10px;  }
+ .primeiroparagrafo{text-align: justify;font-size: 18px; border: black solid 2px; padding}
+ .segundoparagrafo{text-align: justify;font-size: 18px; border: black solid 2px; padding: 10px;  }
