--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 body {background-color:#3efaf7; text-align:justify ; font-size:18px;}
-h1 {text-align: center;background-color:white;}
-h3{ text-align: justify ;color:white}
- b {color:white; font-size: 18px;}
+h1 {text-align: center;background-color:rgb(43, 6, 6);}
+h3{ text-align: justify ;color:rgb(224, 20, 20)}
+ b {color:rgb(49, 36, 36); font-size: 18px;}
  i{color:white; font-size: 18px;}
- header, footer{ background-color:white; color:white; text-align: center; font-size: 20px;}
- .primeiroparagrafo{text-align: justify;font-size: 18px; border: black solid 2px; padding}
- .segundoparagrafo{text-align: justify;font-size: 18px; border: black solid 2px; padding: 10px;  }
+ header, footer{ background-color:white; color:rgb(230, 26, 26); text-align: center; font-size: 20px;}
+ .PRIMEIROPARAGRAFO{text-align: justify;font-size: 18px; border: black solid 2px; padding}
