--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-body {background-color:#3efaf7; text-align:justify ; font-size:18px;}
-h1 {text-align: center;background-color:rgb(43, 6, 6);}
-h3{ text-align: justify ;color:rgb(224, 20, 20)}
+body {background-color:#0a0a0a; text-align:justify ; font-size:18px;}
+h1 {text-align: center;background-color:rgb(253, 249, 249);}
+h3{ text-align: justify ;color:rgb(10, 247, 101)}
  b {color:rgb(49, 36, 36); font-size: 18px;}
  i{color:white; font-size: 18px;}
  header, footer{ background-color:white; color:rgb(230, 26, 26); text-align: center; font-size: 20px;}
